# medical-mcp-toolkit

./: .env.example  .gitignore  ContainerFile  Dockerfile  Dockerfile.db  Makefile  README.md  pyproject.toml  server.py
.github/workflows/: publish-ghcr.yml
db/: 10_init.sql  20_seed.sql
docs/: installation.md
integrations/huggingface/: Dockerfile  README.md  nginx.conf  supervisord.conf
integrations/huggingface/frontend-patches/: api.ts.patch.md
integrations/huggingface/gateway/: requirements.txt
integrations/huggingface/gateway/app/: __init__.py  config.py  db.py  deps.py  main.py  schema.sql
integrations/huggingface/gateway/app/auth/: passwords.py  reset.py  routes.py  sessions.py
integrations/huggingface/gateway/app/chat/: agent.py  routes.py
integrations/huggingface/gateway/app/me/: routes.py
integrations/huggingface/gateway/app/medical_tools/: __init__.py  tools.py
integrations/huggingface/gateway/app/models/: auth.py  me.py  patient.py
integrations/huggingface/gateway/app/repos/: encounters.py  patients.py  users.py
integrations/huggingface/gateway/app/telemetry/: middleware.py
postman/: medical-mcp-toolkit.postman_collection.json
schemas/: components.schema.json
scripts/: create_db.sh  db_schema_check.sh  install_python.sh  install_uv.sh  mcp_curl_demo.sh  mcp_probe_api.py  mcp_quick_client.sh  mcp_sse_client.py  smoke_invoke_all.py
src/medical_mcp_toolkit/: app_sse.py  app_stdio.py  enums.py  http_app.py  main.py  mcp_server.py
src/medical_mcp_toolkit/data/: __init__.py  demo_data.py
src/medical_mcp_toolkit/models/: components.py
src/medical_mcp_toolkit/store/: __init__.py  config.py  pg.py
src/medical_mcp_toolkit/tools/: drug_tools.py  patient_tools.py  scheduling_tools.py  triage_tools.py
src/medical_mcp_toolkit/util/: pydantic_to_mcp.py
tests/: test_health_and_invoke.py
